--- a/config/settings.json
+++ b/config/settings.json
@@ -29,7 +29,8 @@
 
 		"language_mapping": {
 			".*\\.(cpp|h|cxx|inl)": "cpp",
-			".*\\.html": "html"
+			".*\\.html": "html",
+			".*\\.json": "json"
 		},
 
 		"theme": { // https://github.com/tomasiser/vim-code-dark
